--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     <h1 class="text-5xl mt-6 text-center">The <span class="font-semibold text-red-600">Bank</span> Website</h1>
+    <main>
+        <section class="bg-red-100 w-9/12 mx-auto mt-12 p-8">
+            <h3 class="text-3xl mb-5 font-medium">Please login</h3>
+            <input class="w-9/12 block mb-2 px-3" type="email" name="" id="user-email" placeholder="Your Email Address">
+            <input class="w-9/12 block mb-2 px-3" type="password" name="" id="user-password" placeholder="Enter Your Password">
+            <button id="btn-submit" class="bg-blue-600 hover:bg-sky-700 px-8 py-2 text-white font-medium rounded-lg">Submit</button>
+        </section>
+    </main>
+    <script src="js/login.js"></script>
 </body>
 </html>
